Update Dev Portal base url
Base url changed from /api-methods/# to /apis#

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -182,7 +182,7 @@
     "endpoint": {
         "updateInterval": 86400,
         "timeOutDuration": 10800000,
-        "baseUrl": "https://developer.riotgames.com/api-methods/#",
+        "baseUrl": "https://developer.riotgames.com/apis#",
         "maxDistance": 3,
         "aliases": {
             "lol-status-v4": [
