Update missing settings

--- a/private/shared_settings.json
+++ b/private/shared_settings.json
@@ -1,5 +1,8 @@
 {
-    "server": "342988445498474498",
+    "server": {
+        "guildId": "342988445498474498",
+        "guruChannel": "gurus"
+    },
     "botty": {
         "discord": {
             "key": "",
