--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "author": "Querijn Heijmans <querijn@irule.at>",
   "license": "MIT",
   "dependencies": {
-    "@types/fs-extra": "^5.0.4",
     "bufferutil": "^4.0.0",
     "cheerio": "^1.0.0-rc.2",
     "crc-32": "^1.2.0",
-    "discord.js": "11.3.2",
+    "discord.js": "^12.2.0",
     "feed-read": "^0.0.1",
     "fs-extra": "^7.0.1",
     "html2plaintext": "^2.1.0",
@@ -27,23 +26,24 @@
     "striptags": "^3.1.1",
     "turndown": "^4.0.2",
     "turndown-plugin-gfm": "^1.0.2",
+    "typescript": "^3.8.3",
     "uws": "9.14.0",
     "xregexp": "^4.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.4",
     "@types/cheerio": "^0.22.8",
+    "@types/fs-extra": "^5.0.4",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^8.0.22",
+    "@types/node": "^12.12.37",
     "@types/node-fetch": "^2.5.4",
     "@types/pretty-ms": "^3.0.0",
+    "@types/ws": "^7.2.4",
     "@types/xregexp": "^3.0.29",
     "chai": "^4.2.0",
-    "mocha": "^6.2.1",
+    "mocha": "^6.2.3",
     "ts-mockito": "^2.5.0",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.10.0",
-    "typemoq": "^2.1.0",
-    "typescript": "^2.4.2"
+    "tslint": "^6.1.1",
+    "typemoq": "^2.1.0"
   }
 }
