--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chai": "^4.2.0",
     "mocha": "^6.2.3",
     "ts-mockito": "^2.5.0",
+    "ts-node": "^8.9.0",
     "tslint": "^6.1.1",
     "typemoq": "^2.1.0"
   }
