Add !lookup for summoner spells

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -37,6 +37,7 @@
         "skinUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/skins.json",
         "perkUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/perks.json",
         "itemUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/items.json",
+        "summonerSpellUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/summoner-spells.json",
         "confidence": 3,
         "maxGuessCount": 10
     },
