--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -199,13 +199,13 @@
         }
     },
     "pickem": {
-        "leaderboardUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_vs_list_rankings/{listId}",
-        "groupPickUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_group_picks/series/{series}/user/{user}",
-        "bracketsUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_bracket_picks/series/{series}/user/{user}",
-        "pointsUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_points/series/{series}?user=",
-        "worldsId": 6,
-        "blankId": 4643536,
-        "listId": [783467, 829304],
+        "leaderboardUrl": "https://pickem.euw.lolesports.com/api/get_vs_list_rankings/{listId}",
+        "groupPickUrl": "https://pickem.euw.lolesports.com/api/get_group_picks/series/{series}/user/{user}",
+        "bracketsUrl": "https://pickem.euw.lolesports.com/api/get_bracket_picks/series/{series}/user/{user}",
+        "pointsUrl": "https://pickem.euw.lolesports.com/api/get_points/series/{series}?user=",
+        "worldsId": 7,
+        "blankId": 1743991,
+        "listId": [918098],
         "updateTimeout": 3600000,
         "printMode": "BRACKET"
     },
