--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
   "author": "Querijn Heijmans <querijn@irule.at>",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^17.0.23",
+    "@types/node-fetch": "^2.6.1",
     "bufferutil": "^4.0.0",
-    "cheerio": "^1.0.0-rc.2",
+    "cheerio": "^1.0.0-rc.10",
     "crc-32": "^1.2.0",
     "discord.js": "^12.2.0",
-    "feed-read": "^0.0.1",
+    "fast-xml-parser": "^4.0.7",
+    "feed-reader": "^5.0.0-rc3",
     "fs-extra": "^7.0.1",
-    "html2plaintext": "^2.1.0",
+    "html2plaintext": "^2.1.4",
     "moment": "^2.22.2",
-    "node-fetch": "^3.1.1",
+    "node-fetch": "^2.6.1",
     "pretty-ms": "^3.0.0",
     "striptags": "^3.2.0",
     "turndown": "^4.0.2",
     "turndown-plugin-gfm": "^1.0.2",
-    "typescript": "^3.8.3",
+    "typescript": "^4.6.3",
     "uws": "9.14.0",
     "xregexp": "^4.2.0"
   },
@@ -35,8 +38,6 @@
     "@types/cheerio": "^0.22.8",
     "@types/fs-extra": "^5.0.4",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.37",
-    "@types/node-fetch": "^2.5.4",
     "@types/pretty-ms": "^3.0.0",
     "@types/ws": "^7.2.4",
     "@types/xregexp": "^3.0.29",
