--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -121,7 +121,7 @@
     "riotApiLibraries": {
         "noLanguage": "No libraries found for language: ",
         "languageList": "I have libraries for one of the following languages: {languages}\nChoose one you like and reply with `!libs <your language>`.",
-        "wrongChannel": "There are no libraries which support #{channel}. Try using this command in #lol-dev, #lcu-api, or #ingame-api",
+        "wrongChannel": "There are no libraries which support #{channel}. Try using !libs in #lol-dev, #lcu-api, or #ingame-api",
         "requiredTagContextMap": {
             "lol-dev": [
                 "v4",
