Add list of ignored roles for SpamKiller

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -213,6 +213,9 @@
         "allowedUrls": [
             "riotgames.com",
             "leagueoflegends.com"
+        ],
+        "ignoredRoles": [
+            "711261336285347939"
         ]
     },
     "userIntro": {
