--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -1,7 +1,7 @@
 {
     "server": {
         "guildId": "342988445498474498",
-        "guruChannel": "gurus",
+        "guruChannel": "content-alerts",
         "introChannel": "new-users"
     },
     "botty": {
