--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -206,6 +206,9 @@
             "riotgames.com",
             "leagueoflegends.com"
         ],
+        "blockedUrls": [
+            "t.me"
+        ],
         "ignoredRoles": [
             "1055545240058073138",
             "1097223791836414073"
