move channelTopics to shared_settings

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -133,6 +133,21 @@
                 "objc"
             ]
         },
+        "channelTopics": {
+            "lol": [
+                "lol",
+                "v4"
+            ],
+            "lcu": [
+                "lcu"
+            ],
+            "tft": [
+                "tft"
+            ],
+            "lor": [
+                "lor"
+            ]
+        },
         "checkInterval": 10800000
     },
     "autoReact": {
