Added 'py' as an alias for 'python'

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -132,6 +132,9 @@
             ],
             "objective-c": [
                 "objc"
+            ],
+            "python": [
+                "py"
             ]
         },
         "channelTopics": {
