Changed the libs command so it only shows libs tagged with v4 in the lol channel and libs with the channel topic in other channels (e.g val)

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -139,7 +139,6 @@
         },
         "channelTopics": {
             "lol": [
-                "lol",
                 "v4"
             ],
             "lcu": [
@@ -150,6 +149,12 @@
             ],
             "lor": [
                 "lor"
+            ],
+            "val": [
+                "val"
+            ],
+            "rso": [
+                "rso"
             ]
         },
         "checkInterval": 10800000
