Added ingame tag as channel topic for #ingame-api

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -144,6 +144,9 @@
             "lcu": [
                 "lcu"
             ],
+            "ingame": [
+                "ingame"
+            ],
             "tft": [
                 "tft"
             ],
