--- a/package.json
+++ b/package.json
@@ -13,36 +13,31 @@
   "author": "Querijn Heijmans <querijn@irule.at>",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^17.0.23",
-    "@types/node-fetch": "^2.6.1",
-    "bufferutil": "^4.0.0",
+    "bufferutil": "^4.1.0",
     "cheerio": "^1.0.0-rc.10",
-    "crc-32": "^1.2.0",
-    "discord.js": "^14.8.0",
-    "fast-xml-parser": "^4.4.1",
-    "feed-reader": "^6.1.3",
-    "fs-extra": "^7.0.1",
+    "crc-32": "^1.2.2",
+    "discord.js": "^14.25.1",
+    "fast-xml-parser": "^5.3.3",
+    "feed-reader": "^6.1.4-rc1",
+    "fs-extra": "^11.3.3",
     "html2plaintext": "^2.1.4",
-    "moment": "^2.29.4",
-    "node-fetch": "^2.6.1",
-    "pretty-ms": "^3.0.0",
+    "moment": "^2.30.1",
+    "pretty-ms": "^9.3.0",
     "striptags": "^3.2.0",
-    "typescript": "^4.6.3",
-    "xregexp": "^4.2.0"
+    "typescript": "^5.9.3",
+    "xregexp": "^5.1.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.4",
-    "@types/cheerio": "^0.22.8",
-    "@types/fs-extra": "^5.0.4",
-    "@types/mocha": "^5.2.7",
-    "@types/pretty-ms": "^3.0.0",
-    "@types/ws": "^7.2.4",
-    "@types/xregexp": "^3.0.29",
-    "chai": "^4.2.0",
+    "@types/chai": "^5.2.3",
+    "@types/cheerio": "^0.22.35",
+    "@types/fs-extra": "^11.0.4",
+    "@types/pretty-ms": "^4.0.0",
+    "@types/turndown": "^5.0.6",
+    "chai": "^4.5.0",
     "mocha": "^10.8.2",
-    "ts-mockito": "^2.5.0",
-    "ts-node": "^8.9.0",
-    "tslint": "^6.1.1",
+    "ts-mockito": "^2.6.1",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
     "typemoq": "^2.1.0"
   }
 }
